--- a/example/example.fsproj
+++ b/example/example.fsproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Fable.Import.Browser" Version="1.3.0" />
-    <PackageReference Include="suave" Version="2.5.6" />
+    <PackageReference Include="Suave" Version="2.5.6" />
   </ItemGroup>
 
 </Project>
