--- a/example/example.fsproj
+++ b/example/example.fsproj
@@ -7,12 +7,19 @@
 
   <ItemGroup>
     <Compile Include="Types.fs" />
+    <Compile Include="Store.gen.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fable.Import.Browser" Version="1.3.0" />
+    <PackageReference Include="Fable.Browser.Dom" Version="1.1.0" />
+    <PackageReference Include="Fable.Core" Version="3.1.4" />
+    <PackageReference Include="Fable.Fetch" Version="2.2.0" />
     <PackageReference Include="Suave" Version="2.5.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\lib\lib.fsproj" />
   </ItemGroup>
 
 </Project>
