--- a/example/example.yaml
+++ b/example/example.yaml
@@ -1,6 +1,5 @@
-module': Store.Gen
-open': Example.Types
+module: Store.Gen
+open: Example.Types
 items:
 - name: posts
-  type_: Map<int, Post>
-  sync: from-server
+  type: Map<int, Post>
