--- a/example/example.fsproj
+++ b/example/example.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="../lib/SyncGenerator.fs" />
     <Compile Include="Types.fs" />
     <Compile Include="Store.gen.fs" />
     <Compile Include="Program.fs" />
@@ -16,10 +17,6 @@
     <PackageReference Include="Fable.Core" Version="3.1.4" />
     <PackageReference Include="Fable.Fetch" Version="2.2.0" />
     <PackageReference Include="Suave" Version="2.5.6" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\lib\lib.fsproj" />
   </ItemGroup>
 
 </Project>
