--- a/lib/lib.fsproj
+++ b/lib/lib.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="SyncGenerator.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
